// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Radio has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              aria-describedby="radioField_fieldFeedback"
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              aria-describedby="radioField_fieldFeedback"
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
      <div>
        Type something
      </div>
    </div>
  </div>
</div>
`;

exports[`Field Radio has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <fieldset>
      <legend
        class="lfr-ddm-legend"
        id="radioField_fieldLabel"
      >
        label
      </legend>
      <div
        class="ddm__radio"
      >
        <div
          class=""
        >
          <div
            class="custom-control custom-radio custom-control-outside"
            data-checked="false"
          >
            <label>
              <input
                class="custom-control-input"
                name="radioField"
                role="radio"
                type="radio"
                value="option1"
              />
              <span
                class="custom-control-label"
              >
                <span
                  class="custom-control-label-text"
                >
                  Option 1
                </span>
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-radio custom-control-outside"
            data-checked="false"
          >
            <label>
              <input
                class="custom-control-input"
                name="radioField"
                role="radio"
                type="radio"
                value="option2"
              />
              <span
                class="custom-control-label"
              >
                <span
                  class="custom-control-label-text"
                >
                  Option 2
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
      <input
        name="radioField"
        type="hidden"
        value=""
      />
    </fieldset>
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value="value"
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              disabled=""
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              disabled=""
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              aria-required="false"
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option1"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 1
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              aria-required="false"
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="option2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                Option 2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <fieldset>
      <legend
        class="lfr-ddm-legend"
        id="radioField_fieldLabel"
      >
        text
      </legend>
      <div
        class="ddm__radio"
      >
        <div
          class=""
        >
          <div
            class="custom-control custom-radio custom-control-outside"
            data-checked="false"
          >
            <label>
              <input
                class="custom-control-input"
                name="radioField"
                role="radio"
                type="radio"
                value="option1"
              />
              <span
                class="custom-control-label"
              >
                <span
                  class="custom-control-label-text"
                >
                  Option 1
                </span>
              </span>
            </label>
          </div>
          <div
            class="custom-control custom-radio custom-control-outside"
            data-checked="false"
          >
            <label>
              <input
                class="custom-control-input"
                name="radioField"
                role="radio"
                type="radio"
                value="option2"
              />
              <span
                class="custom-control-label"
              >
                <span
                  class="custom-control-label-text"
                >
                  Option 2
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
      <input
        name="radioField"
        type="hidden"
        value=""
      />
    </fieldset>
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio renders no options when options is empty 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      />
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Radio renders options 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="radioField"
  >
    <div
      class="ddm__radio"
    >
      <div
        class=""
      >
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="item"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                label
              </span>
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-outside"
          data-checked="false"
        >
          <label>
            <input
              class="custom-control-input"
              name="radioField"
              role="radio"
              type="radio"
              value="item2"
            />
            <span
              class="custom-control-label"
            >
              <span
                class="custom-control-label-text"
              >
                label2
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <input
      name="radioField"
      type="hidden"
      value=""
    />
    <input
      name="radioField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="radioField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;
